--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
 .App {
+  display: flex;
+  justify-content: space-around;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
 }
 
 .App-header {
@@ -22,11 +19,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .child{
+  width: 50%;
 }
